[package]
name = "test_imu_bno080"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
cty = "0.2.1"
cortex-m = "^0.6.0"
cortex-m-rt = "0.6.11"

#cmsis-rtos2 = { path = "../cmsis_rtos2_rs" }
cmsis-rtos2  = { git = "https://github.com/tstellanova/cmsis_rtos2_rs.git" }

cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
#panic-itm = "~0.4.1"
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"


bno080 = { path = "../BNO080" }
#bno080 = { git = "https://github.com/tstellanova/bno080.git" }

# Cortex-M family specialization:
#stm32h7 = "0.9.0"
#stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743", "rt"] }
stm32f4 = {version = "0.9.0", features = ["stm32f401"] }
stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f401", "rt"] }

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size
