[package]
name = "test_imu_bno080"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
cty = "0.2.1"
cortex-m = "^0.6.0"
cortex-m-rt = "0.6.11"

#cmsis-rtos2 = { path = "../cmsis_rtos2_rs" }
cmsis-rtos2  = { git = "https://github.com/tstellanova/cmsis_rtos2_rs.git" }

# panic support
panic-halt = "0.2.0"
#panic-itm = "~0.4.1"
#panic-semihosting = "0.5.3"

# logging support
cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"


bno080 = { path = "../BNO080" }
#bno080 = { git = "https://github.com/tstellanova/bno080.git" }


# Cortex-M family specialization:
stm32h7 = { version = "0.10.0", optional = true}
stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743", "rt"], optional=true }

stm32f4 = {version = "0.10.0", features = ["stm32f401"], optional=true }
#stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f401", "rt"], optional=true}
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f401", "rt"], optional=true}

#stm32f4xx-hal = { path = "../stm32f4xx-hal", features = ["stm32f407", "rt"], optional=true}
# stm32f4 = {version = "0.10.0", features = ["stm32f407"], optional=true }
# stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f407", "rt"], optional=true}

stm32f3 = {version = "0.10.0", features = ["stm32f3x4"], optional=true}
stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal",  features = ["stm32f334", "rt"], optional=true}


[features]
default = ["stm32h7x"]
stm32f3x = [ "stm32f3", "stm32f3xx-hal"]
stm32f4x = [ "stm32f4", "stm32f4xx-hal"]
stm32h7x = ["stm32h7", "stm32h7xx-hal"]


